// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === ERROR: вернет правильный результат 1`] = `
Object {
  "key": "Работал в каршеринге",
}
`;

exports[`карточка: status === OK: вернет правильный результат 1`] = `
Object {
  "key": "Не работал в каршеринге",
}
`;

exports[`карточка: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Возможно, работал в каршеринге",
}
`;

exports[`карточка: если есть подозрение, поменяет статус на UNKNOWN 1`] = `
Object {
  "key": "Возможно, работал в каршеринге",
  "status": "UNKNOWN",
}
`;

exports[`отчет: status === ERROR: вернет правильный результат 1`] = `
Object {
  "key": "Работа в каршеринге",
  "value": "Нет записей",
}
`;

exports[`отчет: status === OK: вернет правильный результат 1`] = `
Object {
  "key": "Работа в каршеринге",
  "value": "Нет записей",
}
`;

exports[`отчет: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Работа в каршеринге",
  "value": "Есть подозрение",
}
`;

exports[`отчет: если есть подозрение, поменяет статус на UNKNOWN 1`] = `
Object {
  "key": "Работа в каршеринге",
  "status": "UNKNOWN",
  "value": "Есть подозрение",
}
`;
